[project]
name = "gptstonks-multiagents"
version = "0.0.1"
description = "Multi-Agent architectures to create copilots and autopilots."
authors = [
  { name="GPTStonks Team", email="gptstonks@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "gptstonks-wrappers>=0.0.1.post3",
    "langgraph>=0.0.38",
    "langchain>=0.1.16",
    "asyncio>=3.4.3",
    "llama-index>=0.10.30",
    "duckduckgo-search>=5.3.0",
    "wikipedia>=1.4.0",
    "llama-index-llms-openai>=0.1.16",
]
license = {text = "MIT"}

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "trio>=0.23.2",
    "pytest-asyncio>=0.23.5",
]

[project.urls]
"Homepage" = "https://github.com/GPTStonks/gptstonks"
"Bug Tracker" = "https://github.com/GPTStonks/gptstonks/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pdm.build]
excludes = ["./**/.git"]
includes = ["gptstonks"]

[tool.pdm.dev-dependencies]
dev = [
    "pytube>=15.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
