[project]
name = "gptstonks-api"
version = "0.0.1"
description = "GPTStonks API allows interacting with financial data sources using natural language."
authors = [
    {name = "GPTStonks", email = "gptstonks@gmail.com"},
]
dependencies = [
    "pre-commit>=3.6.0",
    "fastapi>=0.104.1",
    "openbb==4.1.2",
    "gptstonks-wrappers>=0.0.2",
    "uvicorn>=0.23.2",
    "sentence-transformers>=2.2.2",
    "duckduckgo-search>=6.2.1",
    "wikipedia>=1.4.0",
    "gdown>=4.7.1",
    "boto3>=1.33.6",
    "langchain>=0.1.11",
    "llama-index>=0.10.18",
    "python-dotenv>=1.0.0",
    "openbb-alpha-vantage>=1.1.0",
    "openbb-biztoc>=1.1.0",
    "openbb-cboe>=1.1.0",
    "openbb-ecb>=1.1.0",
    "openbb-finra>=1.1.0",
    "openbb-government-us>=1.1.0",
    "openbb-nasdaq>=1.1.1",
    "openbb-seeking-alpha>=1.1.0",
    "openbb-stockgrid>=1.1.0",
    "openbb-wsj>=1.1.0",
    "pymongo>=4.6.1",
    "langchain-openai>=0.0.8",
    "langchainhub>=0.1.15",
    "llama-index-llms-langchain>=0.1.3",
    "llama-index-embeddings-openai>=0.1.6",
    "llama-index-llms-huggingface>=0.1.3",
    "llama-index-llms-openai>=0.1.7",
    "llama-index-retrievers-bm25>=0.1.3",
    "llama-index-embeddings-huggingface>=0.1.4",
    "pinecone-client>=3.2.2",
    "llama-index-vector-stores-pinecone>=0.1.6",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.build]
excludes = ["./**/.git"]
includes = ["gptstonks"]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "trio>=0.23.2",
    "pytest-asyncio>=0.23.2",
    "trulens-eval>=0.25.1",
]
llamacpp = [
    "llama-cpp-python>=0.2.23",
]
notebooks = [
    "ipykernel>=6.29.3",
    "ipython>=8.22.2",
    "ipywidgets>=8.1.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
